# galette

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: blueprint.rs  chips.rs  gal.rs  gal_builder.rs  lib.rs  main.rs  optimize.rs  parser.rs  writer.rs
testcases/failure/: GAL16V8_toomanyreg.pld
testcases/optimize/: non_minimal.expected.pld  non_minimal.pld
testcases/ptd/: sparse_16v8.chp  sparse_16v8.fus  sparse_16v8.jed  sparse_16v8.pin  sparse_16v8.pld
testcases/success/: diff_aux_before_main.jed  diff_aux_before_main.pld  diff_long_pin_names.chp  diff_long_pin_names.fus  diff_long_pin_names.jed  diff_long_pin_names.pin  diff_long_pin_names.pld  diff_no_description.jed  diff_no_description.pld  diff_no_equations.fus  diff_no_equations.jed  diff_no_equations.pin  diff_no_equations.pld
tests/: optimize_test.rs  regression_test.rs
