[package]
name = "galette-tk"
version = "0.5.0"
authors = ["Tom Keller <tom@tompkel.net>"]
edition = "2024"
license = "MIT"
description = "A GAL assembler, largely galasm-compatible and written in Rust."
readme = "README.md"
homepage = "https://github.com/kellertk/galette"
repository = "https://github.com/kellertk/galette"
keywords = ["cli", "gal", "pal", "jed", "jedec"]
categories = ["command-line-utilities"]
exclude = [".github"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.9.0"
quine-mc_cluskey = "0.2.4"
thiserror = "1.0.23"
test_bin = "0.4.0"
anyhow = "1.0.6"

[lib]
name = "galette"
path = "src/lib.rs"

[[bin]]
name = "galette"
path = "src/main.rs"
